Added get metrics functionality
