# backend/go/api.go
@@ -42,11 +42,13 @@ type DeploymentAPIRouter interface {
 	StartDeploymentById(http.ResponseWriter, *http.Request)
 	StopDeploymentById(http.ResponseWriter, *http.Request)
 }
-// PredictAPIRouter defines the required methods for binding the api requests to a responses for the PredictAPI
-// The PredictAPIRouter implementation should parse necessary information from the http request,
-// pass the data to a PredictAPIServicer to perform the required actions, then write the service results to the http response.
-type PredictAPIRouter interface { 
+// MetricsAPIRouter defines the required methods for binding the api requests to a responses for the MetricsAPI
+// The MetricsAPIRouter implementation should parse necessary information from the http request,
+// pass the data to a MetricsAPIServicer to perform the required actions, then write the service results to the http response.
+type MetricsAPIRouter interface { 
+	TrainMetrics(http.ResponseWriter, *http.Request)
 	PredictMetrics(http.ResponseWriter, *http.Request)
+	GetMetrics(http.ResponseWriter, *http.Request)
 }
 // ResourceAPIRouter defines the required methods for binding the api requests to a responses for the ResourceAPI
 // The ResourceAPIRouter implementation should parse necessary information from the http request,
@@ -54,12 +56,6 @@ type PredictAPIRouter interface {
 type ResourceAPIRouter interface { 
 	GetResources(http.ResponseWriter, *http.Request)
 	GetResourceById(http.ResponseWriter, *http.Request)
-}
-// TrainAPIRouter defines the required methods for binding the api requests to a responses for the TrainAPI
-// The TrainAPIRouter implementation should parse necessary information from the http request,
-// pass the data to a TrainAPIServicer to perform the required actions, then write the service results to the http response.
-type TrainAPIRouter interface { 
-	TrainMetrics(http.ResponseWriter, *http.Request)
 }
 // UserAPIRouter defines the required methods for binding the api requests to a responses for the UserAPI
 // The UserAPIRouter implementation should parse necessary information from the http request,
@@ -104,12 +100,14 @@ type DeploymentAPIServicer interface {
 }
 
 
-// PredictAPIServicer defines the api actions for the PredictAPI service
+// MetricsAPIServicer defines the api actions for the MetricsAPI service
 // This interface intended to stay up to date with the openapi yaml used to generate it,
 // while the service implementation can be ignored with the .openapi-generator-ignore file
 // and updated with the logic required for the API.
-type PredictAPIServicer interface { 
+type MetricsAPIServicer interface { 
+	TrainMetrics(context.Context, map[string]interface{}, string) (ImplResponse, error)
 	PredictMetrics(context.Context, map[string]interface{}, string) (ImplResponse, error)
+	GetMetrics(context.Context, string) (ImplResponse, error)
 }
 
 
@@ -120,15 +118,6 @@ type PredictAPIServicer interface {
 type ResourceAPIServicer interface { 
 	GetResources(context.Context, string) (ImplResponse, error)
 	GetResourceById(context.Context, int64) (ImplResponse, error)
-}
-
-
-// TrainAPIServicer defines the api actions for the TrainAPI service
-// This interface intended to stay up to date with the openapi yaml used to generate it,
-// while the service implementation can be ignored with the .openapi-generator-ignore file
-// and updated with the logic required for the API.
-type TrainAPIServicer interface { 
-	TrainMetrics(context.Context, map[string]interface{}, string) (ImplResponse, error)
 }
 
 
